# api-model-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general-enhancement.md
.github/workflows/: audit-on-push.yml  build.yml
.run/: All Tests.run.xml  clippy.run.xml
src/: entity.rs  integration.rs  lib.rs  util.rs
src/core/: entity.rs  mod.rs
src/core/web/: mod.rs
src/intg/: entity.rs  mod.rs
src/intg/proto/: integration.rs  messages.proto  mod.rs  voice.proto
src/intg/ws/: mod.rs
src/model/: intg.rs  mod.rs  settings.rs
src/web/: mod.rs
src/ws/: intg.rs  mod.rs
