[package]
name = "uc_api"
version = "0.14.0"
authors = ["Markus Zehnder <markus.z@unfoldedcircle.com>"]
license = "Apache-2.0"
description = "Unfolded Circle API model"
edition = "2024"
repository = "https://github.com/unfoldedcircle/api-model-rs"
rust-version = "1.85"

[dependencies]
# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }

# Helpful macros for working with enums and strings
strum = "0.27"
strum_macros = "0.27"

validator = "0.20"
validator_derive = "0.20"
regex = "1"
once_cell = "1"

[dependencies.sqlx]
version = "0.8.6"
default-features = false
features = [
    "chrono",
    "json",
]
optional = true
