[package]
name = "uc_api"
version = "0.17.0"
authors = ["Markus Zehnder <markus.z@unfoldedcircle.com>"]
license = "Apache-2.0"
description = "Unfolded Circle API model"
edition = "2024"
repository = "https://github.com/unfoldedcircle/api-model-rs"
rust-version = "1.85"

[features]
default = []
prost = ["dep:prost"]
generate_protobuf = ["prost-build"]

[dependencies]
# JSON (de)serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

prost = { version = "0.14", optional = true }

chrono = { version = "0.4", features = ["serde"] }
url = { version = "2", features = ["serde"] }

# Helpful macros for working with enums and strings
strum = "0.27"
strum_macros = "0.27"

validator = "0.20"
validator_derive = "0.20"
regex = "1"
once_cell = "1"

[dependencies.sqlx]
# ATTENTION: 0.6.x versions are broken! Compilation takes forever and uses massive amounts of RAM. At 30 GB I killed it...
# Issue: https://github.com/launchbadge/sqlx/issues/1921
# Possible PR: https://github.com/launchbadge/sqlx/pull/1946
# Next update attempt is with 0.8.x
version = "0.5"
default-features = false
features = [
    "chrono",
    "json",
]
optional = true

[build-dependencies]
prost-build = { version = "0.14", optional = true }
